--- a/rochesterbeermap/package.json
+++ b/rochesterbeermap/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.1",
     "react-google-maps": "^9.4.5",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
