fixes and improvements

--- a/rochesterbeermap/public/manifest.json
+++ b/rochesterbeermap/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Rochester Beer Map",
   "icons": [
     {
       "src": "favicon.ico",
