--- a/rochesterbeermap/package.json
+++ b/rochesterbeermap/package.json
@@ -3,15 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.12",
-    "@types/node": "12.0.0",
-    "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0",
-    "typescript": "3.4.5"
+    "react-scripts": "^3.0.1",
+    "typescript": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,7 +32,10 @@
     ]
   },
   "devDependencies": {
-    "@types/googlemaps": "^3.30.19",
-    "@types/materialize-css": "^1.0.6"
+    "@types/googlemaps": "^3.36.2",
+    "@types/jest": "^24.0.13",
+    "@types/materialize-css": "^1.0.6",
+    "@types/node": "^12.0.4",
+    "@types/react": "^16.8.19"
   }
 }
