--- a/rochesterbeermap/package.json
+++ b/rochesterbeermap/package.json
@@ -3,13 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-dom": "16.8.4",
-    "firebase": "^6.1.0",
-    "materialize-css": "^1.0.0-rc.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1",
-    "typescript": "^3.5.1"
+    "firebase": "^6.3.5",
+    "materialize-css": "^1.0.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "^3.1.0",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,10 +32,11 @@
     ]
   },
   "devDependencies": {
-    "@types/googlemaps": "^3.36.2",
+    "@types/googlemaps": "^3.37.3",
     "@types/jest": "^24.0.13",
     "@types/materialize-css": "^1.0.6",
-    "@types/node": "^12.0.4",
-    "@types/react": "^16.8.19"
+    "@types/node": "^12.7.1",
+    "@types/react": "^16.9.1",
+    "@types/react-dom": "^16.8.5"
   }
 }
